[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Images/buttons/aura.png" type="Texture" id=1]
[ext_resource path="res://Objects/Status/NextRoundIcon.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Menutiles/sword_beta.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Menutiles/sword6.png" type="Texture" id=4]
[ext_resource path="res://Objects/Status/cargando.tres" type="SpriteFrames" id=5]

[node name="NextRoundIcon" type="TextureButton"]
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 90, 100 )
rotation = 0.785398
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 100, 70 )
rotation = -0.785398
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 4 )

[node name="AnimatedCountdown" type="AnimatedSprite" parent="."]
position = Vector2( 80, 80 )
frames = ExtResource( 5 )
flip_h = true
[connection signal="pressed" from="." to="." method="_on_NextRoundIcon_pressed"]
[connection signal="animation_finished" from="AnimatedCountdown" to="." method="_on_AnimatedCountdown_animation_finished"]
